src/tests/ui/err-02.stderr
error[E0277]: the trait bound `Fatal: Fatality` is not satisfied
  --> tests/ui/err-02.rs:35:24
   |
35 | #[derive(Debug, Error, Fatality)]
   |                        ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Fatality` is not implemented for `Fatal`
  --> tests/ui/err-02.rs:23:1
   |
23 | struct Fatal;
   | ^^^^^^^^^^^^
help: the trait `Fatality` is implemented for `Kaboom`
  --> tests/ui/err-02.rs:35:24
   |
35 | #[derive(Debug, Error, Fatality)]
   |                        ^^^^^^^^
   = note: this error originates in the derive macro `Fatality` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `?` couldn't convert the error to `Kaboom`
  --> tests/ui/err-02.rs:47:12
   |
46 | fn iffy() -> Result<(), Kaboom> {
   |              ------------------ expected `Kaboom` because of this
47 |     Err(Fatal)?
   |     ----------^ the trait `From<Fatal>` is not implemented for `Kaboom`
   |     |
   |     this can't be annotated with `?` because it has type `Result<_, Fatal>`
   |
note: `Kaboom` needs to implement `From<Fatal>`
  --> tests/ui/err-02.rs:36:1
   |
36 | enum Kaboom {
   | ^^^^^^^^^^^
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait

error[E0277]: `?` couldn't convert the error to `Kaboom`
  --> tests/ui/err-02.rs:51:11
   |
50 | fn bobo() -> Result<(), Kaboom> {
   |              ------------------ expected `Kaboom` because of this
51 |     Err(Bobo)?
   |     ---------^ the trait `From<Bobo>` is not implemented for `Kaboom`
   |     |
   |     this can't be annotated with `?` because it has type `Result<_, Bobo>`
   |
note: `Kaboom` needs to implement `From<Bobo>`
  --> tests/ui/err-02.rs:36:1
   |
36 | enum Kaboom {
   | ^^^^^^^^^^^
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
